// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vime-fullscreen-control class="hidden">
  <vime-control hidden="" keycodes="70" label="Fullscreen">
    <vime-icon href="#vime-exit-fullscreen"></vime-icon>
    <vime-tooltip>
      Exit fullscreen (f)
    </vime-tooltip>
  </vime-control>
</vime-fullscreen-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vime-fullscreen-control class="hidden">
  <vime-control hidden="" keycodes="70" label="Fullscreen">
    <vime-icon href="#vime-enter-fullscreen"></vime-icon>
    <vime-tooltip>
      Enter fullscreen (f)
    </vime-tooltip>
  </vime-control>
</vime-fullscreen-control>
`;
